@@ -1,0 +1,37 @@
+/* $Id$ */
+/*
+   Copyright (C) 2010 by Mark de Wever <koraq@xs4all.nl>
+   Part of the Battle for Wesnoth Project http://www.wesnoth.org/
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License version 2
+   or at your option any later version.
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY.
+
+   See the COPYING file for more details.
+*/
+
+#ifndef GUI_AUXILIARY_WIDGET_DEFINITION_PROGRESS_BAR_HPP_INCLUDED
+#define GUI_AUXILIARY_WIDGET_DEFINITION_PROGRESS_BAR_HPP_INCLUDED
+
+#include "gui/auxiliary/widget_definition.hpp"
+
+namespace gui2 {
+
+struct tprogress_bar_definition
+	: public tcontrol_definition
+{
+	explicit tprogress_bar_definition(const config& cfg);
+
+	struct tresolution
+		: public tresolution_definition_
+	{
+		explicit tresolution(const config& cfg);
+	};
+};
+
+} // namespace gui2
+
+#endif
+
