@@ -13,6 +13,7 @@ Version 1.9.0-svn:
    * Enabled alignment in labels
    * Avoid resizing when next or previous button is pressed in the
      --new-widgets title screen
+   * Added gui2 progress bar widget
  * WML Engine:
    * Deprecated [set_variable]'s random key, use rand instead
    * Renamed [unit][status] healable to unhealable so it can default to 'no'
